Publish Telecom Subscription Service v3.0.0