@@ -8,6 +8,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import com.netflix.hystrix.contrib.javanica.annotation.HystrixCommand;
+
 import Telecom.SubscriptionService.dto.UserDto;
 import Telecom.SubscriptionService.model.User;
 import Telecom.SubscriptionService.repository.UserRepository;
@@ -61,11 +63,25 @@ public class UserService {
 	userRepository.deleteById(id);
     }
 
+//    public List<Object> getUserTickets(Long userId) {
+//        String url = "http://localhost:8083/"; // align with test stub
+//        ResponseEntity<List<Object>> response = restTemplate.exchange(
+//            url, HttpMethod.GET, null, new ParameterizedTypeReference<List<Object>>() {});
+//        return response.getBody() != null ? response.getBody() : java.util.Collections.emptyList();
+//    }
+//    
+    @HystrixCommand(fallbackMethod = "getUserTicketsFallback")
     public List<Object> getUserTickets(Long userId) {
-        String url = "http://localhost:8083/"; // align with test stub
-        ResponseEntity<List<Object>> response = restTemplate.exchange(
-            url, HttpMethod.GET, null, new ParameterizedTypeReference<List<Object>>() {});
-        return response.getBody() != null ? response.getBody() : java.util.Collections.emptyList();
+	String url = "http://localhost:8083/tickets/" + userId; // align with tests/mock
+	ResponseEntity<List<Object>> resp = restTemplate.exchange(url, HttpMethod.GET, null,
+		new ParameterizedTypeReference<List<Object>>() {
+		});
+	return resp.getBody() != null ? resp.getBody() : java.util.Collections.emptyList();
+    }
+
+    // Fallback signature: same params (+ optional Throwable)
+    public List<Object> getUserTicketsFallback(Long userId, Throwable t) {
+	return java.util.List.of(java.util.Map.of("message", "Tickets unavailable (fallback)"));
     }
 
 }
